--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="body-edr">
 	<header class="edr-header">
 		<nav class="navbar navbar-expand-lg">
-			<div class="container"> <a id="edr-logo" class="navbar-brand" href="/"> <img src="/imgs/edr_logo.svg"
+			<div class="container"> <a id="edr-logo" class="navbar-brand" href="/"> <img src="./imgs/edr_logo.svg"
 						alt="CPA EDR Logo"> </a>
 				<div class="edr-top-nav">
 					  <a class="edr-top-nav-link active">Inicio</a>
