--- a/ai-studio.html
+++ b/ai-studio.html
@@ -29,7 +29,7 @@
 	data-bs-smooth-scroll="true">
 	<header class="edr-header">
 		<nav class="navbar navbar-expand-lg">
-			<div class="container"> <a id="edr-logo" class="navbar-brand" href="/"> <img src="/imgs/edr_logo.svg"
+			<div class="container"> <a id="edr-logo" class="navbar-brand" href="/"> <img src="./imgs/edr_logo.svg"
 						alt="CPA EDR Logo"> </a>
 				<div class="edr-top-nav">
 					<a href="index.html" class="edr-top-nav-link ">Inicio</a>
@@ -173,7 +173,7 @@
 						</div>
 						<div class="modal-body p-0">
 							<div class="ratio ratio-16x9"> <video id="video1" controls>
-									<source src="/videos/video1.mp4" type="video/mp4">
+									<source src="./videos/video1.mp4" type="video/mp4">
 									Tu navegador no soporta el elemento de video.
 								</video> </div>
 						</div>
