--- a/elementos.html
+++ b/elementos.html
@@ -29,7 +29,7 @@
   data-bs-smooth-scroll="true">
   <header class="edr-header">
     <nav class="navbar navbar-expand-lg">
-      <div class="container"> <a id="edr-logo" class="navbar-brand" href="/"> <img src="/imgs/edr_logo.svg"
+      <div class="container"> <a id="edr-logo" class="navbar-brand" href="/"> <img src="./imgs/edr_logo.svg"
             alt="CPA EDR Logo"> </a>
         <div class="edr-top-nav"> 
           <a href="index.html" class="edr-top-nav-link ">Inicio</a>
